Add paragraphe in home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,7 @@
 <body>
 
     <h1>This is home</h1>
+    <p>Something</p>
     {{greeting}}
     <textarea name="review" placeholder="go na hui"></textarea>
 
